# SQLAlchemy_task

./: .env.dev  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini
docker/: app.sh
migrations/: env.py
migrations/versions/: 2023_12_05_1237-dfb933a3cbbe_initial.py  2023_12_06_1513-d6bf7d91b8ba_migration_2.py  2023_12_06_1637-08a85fd8de03_migration_3.py  2023_12_06_1640-be40b5978f6b_migration_4.py  2023_12_07_0947-2de137f06674_migration_5.py  2023_12_12_1638-86175c445386_модели_для_тестов.py  2023_12_13_1450-3d6d2b47114d_миграция_для_ткстов2.py
src/: alembic.ini  config.py  database.py  main.py  queues.py
src/migrations/: env.py
src/migrations/versions/: 2023_12_06_1706-3f6ae3ea8557_migration_4.py  2023_12_06_1707-d75efab8063b_migration_5.py  2023_12_13_1244-8b084aa64cfc_миграция_для_тестов_2.py  2023_12_13_1618-c23cafd1c8ef_миграция_для_тестов_3.py  2023_12_13_1635-8020a2931cf4_миграция_для_ткстов4.py  2023_12_13_1713-370bf9157648_миграция_для_тестов_5.py  2023_12_14_0904-f34534ab9090_миграция_для_ткстов6.py  2023_12_14_0908-f6614bfdbfd3_миграция_для_тестов_7.py  2023_12_14_0910-08956c5d593b_миграция_для_ткстов8.py  2023_12_14_1133-dab1e5c52aa4_миграция_для_тестов_9.py  (+1 more)
src/mock_test_func/: func_for_mock.py
src/models/: category.py  feature.py  order.py  order_product.py  product.py  product_category.py  profile.py  store.py  store_order.py  test_transaction.py  user.py
src/rabbitmk_task/: routers.py  schemas.py
tests/: conftest.py
tests/mock_tests/: test_func.py
tests/unit_tests/: conftest.py  test_rabbitmk.py  test_user.py
